--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/reyyourock/metronome/issues"
   },
-  "homepage": "https://github.com/reyyourock/metronome#readme"
+  "homepage": "https://github.com/reyyourock/metronome#readme",
+  "dependencies": {
+    "timer.js": "^1.0.4"
+  }
 }
